[package]
name = "clips"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-core = "0.62"
windows = { version = "0.62", features = [
    "Foundation",
    "Foundation_Metadata",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Security_Authorization_AppCapabilityAccess",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-manifest = "1.4"
embed-resource = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
# panic stays "unwind" (default) on purpose: the supervisor relies on
# catch_unwind to restart pipeline legs instead of dying.
